--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
