--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "dbus": "^1.0.3",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.4",
