--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
     "dbus": "^1.0.3",
     "eslint-config-airbnb": "^17.1.0",
@@ -10,6 +11,7 @@
     "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
