Add package config to environment configuration

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
+    "config": "^3.0.1",
     "dbus": "^1.0.3",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.4",
@@ -38,9 +39,9 @@
     "lint"
   ],
   "devDependencies": {
-    "pre-commit": "^1.2.2",
     "babel-cli": "^6.26.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "pre-commit": "^1.2.2"
   }
 }
