--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "ws": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
