--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "shortid": "^2.2.14",
     "ws": "^6.2.1"
   },
   "scripts": {
