--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "axios": "^0.18.0",
     "config": "^3.0.1",
     "dbus": "^1.0.3",
     "eslint-config-airbnb": "^17.1.0",
+    "eventemitter3": "^3.1.0",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
+    "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
