Add action in slave card
This patch show collapse button in card to show source in a slave

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "config": "^3.0.1",
     "dbus": "^1.0.3",
     "eslint-config-airbnb": "^17.1.0",
